--- a/src/views/auth/signin.hbs
+++ b/src/views/auth/signin.hbs
@@ -7,7 +7,7 @@
         </div>
         <div class="card-body">
           <img
-            src="/img/logotangatab.png"
+            src="/img/logoreingab.png"
             alt="Logo Umo"
             class="card-img-top mx-auto m-2 w-50"
           />
