--- a/src/views/partials/navigation.hbs
+++ b/src/views/partials/navigation.hbs
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/"><img src="\img\logotangataw.png" alt="" width="30" height="24" class="d-inline-block align-text-top">Tangata</a>
+      <a class="navbar-brand" href="/"><img src="\img\logoreingaw.png" alt="" width="30" height="24" class="d-inline-block align-text-top">Reinga</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarText"
         aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -46,7 +46,7 @@
         </span>
         {{/if}}
         <span class="navbar-text">
-          Aplicacion Para el Control de Empleados
+          Aplicacion Para el Control de Inventarios
         </span>
       </div>
     </div>
