listado de equipos funcionando

--- a/src/views/profile.hbs
+++ b/src/views/profile.hbs
@@ -5,8 +5,8 @@
                 <div class="card-body">
                     <h3>Bienvenido {{user.fullname}}</h3>
                     <h4>{{user.username}}</h4>
-                    <a href="/registros" class="btn btn-primary m-4">
-                        Gestionar Actividades
+                    <a href="/modules" class="btn btn-primary m-4">
+                        Gestionar Activos
                     </a>
                 </div>
             </div>
