creado el boton de agregar nuevo registro y las correspondientes pruebas

--- a/src/views/modules/list.hbs
+++ b/src/views/modules/list.hbs
@@ -14,7 +14,7 @@
               Aquí puedes gestionar los equipos de computo corporativos.
             </p>
             <p>(Laptops, Desktops, Servers)</p>
-            <a href="/modules/hardware/list" class="btn btn-primary">Ir a la gestión de
+            <a href="/hardware" class="btn btn-primary">Ir a la gestión de
               equipos</a>
           </div>
         </div>
