--- a/src/views/hardware/list.hbs
+++ b/src/views/hardware/list.hbs
@@ -1,22 +1,35 @@
 <div class="container p-4">
   <div class="row">
 
+    <div class="form-group-newreg">
+       <a href="/hardware/add" class="btn btn-primary btn-lg gap-2 col-6 mx-auto">Nuevo Registro</a>
+    </div>
+
     {{#each hardware}}
       <div class="col-md-3">
         <div class="card text-center">
           <div class="card-body">
-            <a href="{{url}}" target="_blank">
-              <h3 class="card-title text-uppercase">
-                {{title}}
-              </h3>
-            </a>
+            <h2 class="card-title text-uppercase">
+              {{serial}}
+            </h2>
             <p class="card-text">
-              {{description}}
+              {{nombre_equipo}}
             </p>
-            <p>{{timeago created_at}}</p>
-            <a href="/registros/delete/{{id}}" class="btn btn-danger">Delete
-              link</a>
-            <a href="/registros/edit/{{id}}" class="btn btn-secondary">Edit link</a>
+            <p>{{categoria}}</p>
+            <p>{{fabricante}} // {{modelo}}</p>
+            <p>{{sistema_operativo}}</p>
+            <p></p>
+            <p>{{procesador}}</p>
+            <p>RAM: {{ram}}GB</p>
+            <p>{{tipo_almacenamiento}} {{capacidad_almacenamiento}}GB</p>
+            <p>{{propiedad}}</p>
+            <p>{{salud}}</p>
+            <p>{{fecha_ultimo_mantenimiento}}</p>
+            <a
+              href="/hardware/delete/{{id}}"
+              class="btn btn-danger"
+            >Eliminar</a>
+            <a href="/hardware/edit/{{id}}" class="btn btn-secondary">Editar</a>
           </div>
         </div>
       </div>
@@ -24,10 +37,15 @@
       <div class="col-md-4 mx-auto">
         <div class="card card-body text-center">
           <p>No hay registros</p>
-          <a href="/registros/add">Crear Uno</a>
+          <a href="/hardware/add">Crear Uno</a>
         </div>
       </div>
     {{/each}}
 
   </div>
 </div>
+
+<style>
+  .form-group-newreg { margin-bottom: 15px; display: flex; justify-content: center;
+  align-items: center;}
+</style>
