configurado y probada la funcion de eliminar registros

--- a/src/views/hardware/list.hbs
+++ b/src/views/hardware/list.hbs
@@ -26,10 +26,10 @@
             <p>{{salud}}</p>
             <p>{{fecha_ultimo_mantenimiento}}</p>
             <a
-              href="/hardware/delete/{{id}}"
+              href="/hardware/delete/{{serial}}"
               class="btn btn-danger"
             >Eliminar</a>
-            <a href="/hardware/edit/{{id}}" class="btn btn-secondary">Editar</a>
+            <a href="/hardware/edit/{{serial}}" class="btn btn-secondary">Editar</a>
           </div>
         </div>
       </div>
