--- a/src/views/hardware/edit.hbs
+++ b/src/views/hardware/edit.hbs
@@ -3,36 +3,151 @@
     <div class="col-md-4 mx-auto">
       <div class="card">
         <div class="card-body">
-          <form action="/registros/edit/{{link.id}}" method="post">
-            <div class="form-group">
+          <form action="/hardware/edit/{{equipos.serial}}" method="post">
+
+            <div class="form-group" disabled>
               <input
                 type="text"
-                value="{{link.title}}"
+                value="{{equipos.serial}}"
                 class="form-control"
-                name="title"
-                placeholder="title"
+                name="serial"
+                placeholder="Serial De Equipo"
                 autofocus
               />
             </div>
+
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="categoria">Categoria de
+                Equipo</label>
+              <select class="form-select" id="categoria">
+                <option value="laptop">Laptop</option>
+                <option value="desktop">Desktop</option>
+                <option value="workstation">Workstation</option>
+              </select>
+            </div>
+
             <div class="form-group">
               <input
-                type="url"
-                value="{{link.url}}"
+                type="text"
+                value="{{equipos.nombre_equipo}}"
                 class="form-control"
-                name="url"
-                placeholder="url"
+                name="nombre_equipo"
+                placeholder="Nombre De Equipo"
+              />
+            </div>
+
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="sistema_operativo">Sistema
+                Operativo</label>
+              <select class="form-select" id="sistema_operativo">
+                <option value="w11">Windows 11</option>
+                <option value="w10">Windows 10</option>
+                <option value="w8">Windows 8</option>
+                <option value="w7">Windows 7</option>
+                <option value="wxp">Windows XP</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <input
+                type="text"
+                value="{{equipos.fabricante}}"
+                class="form-control"
+                name="fabricante"
+                placeholder="Fabricante De Equipo"
+              />
+            </div>
+
+            <div class="form-group">
+              <input
+                type="text"
+                value="{{equipos.modelo}}"
+                class="form-control"
+                name="modelo"
+                placeholder="Modelo De Equipo"
+              />
+            </div>
+
+            <div class="form-group">
+              <input
+                type="text"
+                value="{{equipos.procesador}}"
+                class="form-control"
+                name="procesador"
+                placeholder="Procesador"
+              />
+            </div>
+
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="ram">Cantidad de RAM</label>
+              <select class="form-select" id="ram">
+                <option value="1">1 GB</option>
+                <option value="2">2 GB</option>
+                <option value="4">4 GB</option>
+                <option value="8">8 GB</option>
+                <option value="12">12 GB</option>
+                <option value="16">16 GB</option>
+                <option value="24">24 GB</option>
+                <option value="32">32 GB</option>
+              </select>
+            </div>
+
+            <label
+              for="almacenamiento"
+              class="form-label"
+            >Alamacenamiento</label>
+            <div class="input-group mb-3">
+              <span class="input-group-text">Tipo</span>
+              <select class="form-select" id="tipo_almacenamiento">
+                <option value="HDD">HDD</option>
+                <option value="SSD">SSD</option>
+              </select>
+              <span class="input-group-text">Capacidad</span>
+              <select class="form-select" id="capacidad_almacenamiento">
+                <option value="240">240 GB</option>
+                <option value="256">256 GB</option>
+                <option value="480">480 GB</option>
+                <option value="500">500 GB</option>
+                <option value="750">750 GB</option>
+                <option value="1024">1 TB</option>
+                <option value="2048">2 TB</option>
+              </select>
+            </div>
+
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="propiedad">Propiedad de
+                Equipo</label>
+              <select class="form-select" id="propiedad">
+                <option value="Propio">Propio</option>
+                <option value="Renting">Renting</option>
+              </select>
+            </div>
+
+            <div class="input-group mb-3">
+              <label class="input-group-text" for="salud">Estado del Equipo</label>
+              <select class="form-select" id="salud">
+                <option value="Excelente">Excelente</option>
+                <option value="Bueno">Bueno</option>
+                <option value="Aceptable">Aceptable</option>
+                <option value="Revisar">Revisar o Reparar</option>
+                <option value="Baja">Dar de Baja</option>
+              </select>
+            </div>
+
+            <div class="form-group">
+              <label
+                class="input-group-text"
+                for="fecha_ultimo_mantenimiento"
+              >Ultimo mantenimiento</label>
+              <input
+                type="date"
+                value="{{equipos.fecha_ultimo_mantenimiento}}"
+                class="form-group"
+                name="fecha_ultimo_mantenimiento"
               />
             </div>
             <div class="form-group">
-              <textarea
-                name="description"
-                rows="2"
-                class="form-control"
-                placeholder="description"
-              >{{link.description}}</textarea>
-            </div>
-            <div class="form-group">
-                <button class="btn btn-success">save</button>
+              <button class="btn btn-success">Guardar</button>
             </div>
           </form>
         </div>
@@ -40,3 +155,8 @@
     </div>
   </div>
 </div>
+
+<style>
+  .form-group { margin-bottom: 10px; display: flex; justify-content: center;
+  align-items: center;}
+</style>
