eliminacion de archivos innecesarios, orden, trabajo sobre edit

--- a/src/views/hardware/edit.hbs
+++ b/src/views/hardware/edit.hbs
@@ -5,10 +5,10 @@
         <div class="card-body">
           <form action="/hardware/edit/{{equipos.serial}}" method="post">
 
-            <div class="form-group" disabled>
+            <div class="form-group">
               <input
                 type="text"
-                value="{{equipos.serial}}"
+                value= "{{equipos.serial}}"
                 class="form-control"
                 name="serial"
                 placeholder="Serial De Equipo"
@@ -16,14 +16,15 @@
               />
             </div>
 
-            <div class="input-group mb-3">
-              <label class="input-group-text" for="categoria">Categoria de
-                Equipo</label>
-              <select class="form-select" id="categoria">
-                <option value="laptop">Laptop</option>
-                <option value="desktop">Desktop</option>
-                <option value="workstation">Workstation</option>
-              </select>
+            <div class="form-group">
+              <input
+                type="text"
+                value="{{equipos.categoria}}"
+                class="form-control"
+                name="categoria"
+                placeholder="Categoria De Equipo"
+                autofocus
+              />
             </div>
 
             <div class="form-group">
@@ -36,16 +37,14 @@
               />
             </div>
 
-            <div class="input-group mb-3">
-              <label class="input-group-text" for="sistema_operativo">Sistema
-                Operativo</label>
-              <select class="form-select" id="sistema_operativo">
-                <option value="w11">Windows 11</option>
-                <option value="w10">Windows 10</option>
-                <option value="w8">Windows 8</option>
-                <option value="w7">Windows 7</option>
-                <option value="wxp">Windows XP</option>
-              </select>
+            <div class="form-group">
+              <input
+                type="text"
+                value="{{equipos.sistema_operativo}}"
+                class="form-control"
+                name="sistema_operativo"
+                placeholder="Sistema Operativo"
+              />
             </div>
 
             <div class="form-group">
@@ -78,60 +77,59 @@
               />
             </div>
 
-            <div class="input-group mb-3">
-              <label class="input-group-text" for="ram">Cantidad de RAM</label>
-              <select class="form-select" id="ram">
-                <option value="1">1 GB</option>
-                <option value="2">2 GB</option>
-                <option value="4">4 GB</option>
-                <option value="8">8 GB</option>
-                <option value="12">12 GB</option>
-                <option value="16">16 GB</option>
-                <option value="24">24 GB</option>
-                <option value="32">32 GB</option>
-              </select>
+            <div class="form-group">
+              <input
+                type="text"
+                value="{{equipos.ram}}"
+                class="form-control"
+                name="ram"
+                placeholder="ram"
+              />
             </div>
 
             <label
               for="almacenamiento"
               class="form-label"
-            >Alamacenamiento</label>
-            <div class="input-group mb-3">
-              <span class="input-group-text">Tipo</span>
-              <select class="form-select" id="tipo_almacenamiento">
-                <option value="HDD">HDD</option>
-                <option value="SSD">SSD</option>
-              </select>
-              <span class="input-group-text">Capacidad</span>
-              <select class="form-select" id="capacidad_almacenamiento">
-                <option value="240">240 GB</option>
-                <option value="256">256 GB</option>
-                <option value="480">480 GB</option>
-                <option value="500">500 GB</option>
-                <option value="750">750 GB</option>
-                <option value="1024">1 TB</option>
-                <option value="2048">2 TB</option>
-              </select>
-            </div>
+            >Alamacenamiento</label>            
 
-            <div class="input-group mb-3">
-              <label class="input-group-text" for="propiedad">Propiedad de
-                Equipo</label>
-              <select class="form-select" id="propiedad">
-                <option value="Propio">Propio</option>
-                <option value="Renting">Renting</option>
-              </select>
-            </div>
+            <div class="form-group">
+              <input
+                type="text"
+                value="{{equipos.tipo_almacenamiento}}"
+                class="form-control"
+                name="tipo_almacenamiento"
+                placeholder="tipo de almacenamiento"
+              />
+            </div>            
 
-            <div class="input-group mb-3">
-              <label class="input-group-text" for="salud">Estado del Equipo</label>
-              <select class="form-select" id="salud">
-                <option value="Excelente">Excelente</option>
-                <option value="Bueno">Bueno</option>
-                <option value="Aceptable">Aceptable</option>
-                <option value="Revisar">Revisar o Reparar</option>
-                <option value="Baja">Dar de Baja</option>
-              </select>
+            <div class="form-group">
+              <input
+                type="text"
+                value="{{equipos.capacidad_almacenamiento}}"
+                class="form-control"
+                name="capacidad_almacenamiento"
+                placeholder="capacidad_almacenamiento"
+              />
+            </div>            
+
+            <div class="form-group">
+              <input
+                type="text"
+                value="{{equipos.propiedad}}"
+                class="form-control"
+                name="propiedad"
+                placeholder="propiedad"
+              />
+            </div>            
+
+            <div class="form-group">
+              <input
+                type="text"
+                value="{{equipos.salud}}"
+                class="form-control"
+                name="salud"
+                placeholder="salud"
+              />
             </div>
 
             <div class="form-group">
