--- a/src/views/hardware/list.hbs
+++ b/src/views/hardware/list.hbs
@@ -29,7 +29,10 @@
               href="/hardware/delete/{{serial}}"
               class="btn btn-danger"
             >Eliminar</a>
-            <a href="/hardware/edit/{{serial}}" class="btn btn-secondary">Editar</a>
+            <a
+              href="/hardware/edit/{{serial}}"
+              class="btn btn-secondary"
+            >Editar</a>
           </div>
         </div>
       </div>
