se agrega boton de busqueda y se descarta barra de busqueda en list.hbs

--- a/src/views/hardware/add.hbs
+++ b/src/views/hardware/add.hbs
@@ -18,7 +18,11 @@
             <div class="input-group mb-3">
               <label class="input-group-text" for="categoria">Categoria de
                 Equipo</label>
-              <select class="form-select" id="categoria" name="categoria_equipo">
+              <select
+                class="form-select"
+                id="categoria"
+                name="categoria_equipo"
+              >
                 <option value="laptop">Laptop</option>
                 <option value="desktop">Desktop</option>
                 <option value="workstation">Workstation</option>
@@ -35,8 +39,13 @@
             </div>
 
             <div class="input-group mb-3">
-              <label class="input-group-text" for="sistema_operativo">Sistema Operativo</label>
-              <select class="form-select" id="sistema_operativo" name="sistema_operativo">
+              <label class="input-group-text" for="sistema_operativo">Sistema
+                Operativo</label>
+              <select
+                class="form-select"
+                id="sistema_operativo"
+                name="sistema_operativo"
+              >
                 <option value="w11">Windows 11</option>
                 <option value="w10">Windows 10</option>
                 <option value="w8">Windows 8</option>
@@ -86,15 +95,26 @@
               </select>
             </div>
 
-            <label for="almacenamiento" class="form-label">Alamacenamiento</label>
+            <label
+              for="almacenamiento"
+              class="form-label"
+            >Alamacenamiento</label>
             <div class="input-group mb-3">
               <span class="input-group-text">Tipo</span>
-              <select class="form-select" id="tipo_almacenamiento" name="tipo_almacenamiento">
+              <select
+                class="form-select"
+                id="tipo_almacenamiento"
+                name="tipo_almacenamiento"
+              >
                 <option value="HDD">HDD</option>
                 <option value="SSD">SSD</option>
               </select>
               <span class="input-group-text">Capacidad</span>
-              <select class="form-select" id="capacidad_almacenamiento" name="capacidad_almacenamiento">
+              <select
+                class="form-select"
+                id="capacidad_almacenamiento"
+                name="capacidad_almacenamiento"
+              >
                 <option value="240">240 GB</option>
                 <option value="256">256 GB</option>
                 <option value="480">480 GB</option>
@@ -106,8 +126,13 @@
             </div>
 
             <div class="input-group mb-3">
-              <label class="input-group-text" for="propiedad">Propiedad de Equipo</label>
-              <select class="form-select" id="propiedad" name="propiedad_equipo">
+              <label class="input-group-text" for="propiedad">Propiedad de
+                Equipo</label>
+              <select
+                class="form-select"
+                id="propiedad"
+                name="propiedad"
+              >
                 <option value="Propio">Propio</option>
                 <option value="Renting">Renting</option>
               </select>
@@ -115,7 +140,7 @@
 
             <div class="input-group mb-3">
               <label class="input-group-text" for="salud">Estado del Equipo</label>
-              <select class="form-select" id="salud" name="estado_equipo">
+              <select class="form-select" id="salud" name="salud">
                 <option value="Excelente">Excelente</option>
                 <option value="Bueno">Bueno</option>
                 <option value="Aceptable">Aceptable</option>
@@ -125,8 +150,15 @@
             </div>
 
             <div class="form-group">
-              <label class="input-group-text" for="fecha_ultimo_mantenimiento">Ultimo mantenimiento realizado</label>
-              <input type="date" class="form-control" name="fecha_ultimo_mantenimiento" />
+              <label
+                class="input-group-text"
+                for="fecha_ultimo_mantenimiento"
+              >Ultimo mantenimiento realizado</label>
+              <input
+                type="date"
+                class="form-control"
+                name="fecha_ultimo_mantenimiento"
+              />
             </div>
 
             <button type="submit" class="btn btn-success">Guardar</button>
@@ -138,10 +170,6 @@
 </div>
 
 <style>
-  .form-group {
-    margin-bottom: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
+  .form-group { margin-bottom: 10px; display: flex; justify-content: center;
+  align-items: center; }
 </style>
