--- a/src/views/hardware/list.hbs
+++ b/src/views/hardware/list.hbs
@@ -1,18 +1,25 @@
 <div class="container p-4">
   <div class="row">
 
-    <div class="form-group-newreg">
-      <a
-        href="/hardware/add"
-        class="btn btn-success btn-lg gap-2 col-6 mx-auto"
-      >Nuevo Registro</a>
-      <a
-        href="/hardware/search"
-        class="btn btn-primary btn-lg gap-2 col-6 mx-auto"
-      >Buscar Equipo</a>
-    </div>
+    <div class="container p-4">
+      <div class="row">
+        <div class="col-md-8 mx-auto">
 
-    {{#each hardware}}
+          <form action="/hardware/search" method="POST">
+            <label for="busqueda">Introduce tu búsqueda:</label>
+            <input type="text" id="busqueda" name="busqueda">
+            <button type="submit">Buscar</button>
+          </form>
+          
+        </div>
+      </div>
+
+      <div class="form-group-newreg">
+        <a href="/hardware/add" class="btn btn-success btn-lg gap-2 col-6 mx-auto">Nuevo Registro</a>
+        <a href="/hardware/search" class="btn btn-primary btn-lg gap-2 col-6 mx-auto">Buscar Equipo</a>
+      </div>
+
+      {{#each hardware}}
       <div class="col-md-3">
         <div class="card text-center">
           <div class="card-body">
@@ -37,30 +44,29 @@
             <p>PROPIEDAD: {{propiedad}}</p>
             <p>ESTADO DEL EQUIPO: {{salud}}</p>
             <p>ULTIMO MANTENIMIENTO: {{timeago fecha_ultimo_mantenimiento}}</p>
-            <a
-              href="/hardware/delete/{{serial}}"
-              class="btn btn-danger"
-            >Eliminar</a>
-            <a
-              href="/hardware/edit/{{serial}}"
-              class="btn btn-secondary"
-            >Editar</a>
+            <a href="/hardware/delete/{{serial}}" class="btn btn-danger">Eliminar</a>
+            <a href="/hardware/edit/{{serial}}" class="btn btn-secondary">Editar</a>
           </div>
         </div>
       </div>
-    {{else}}
+      {{else}}
       <div class="col-md-4 mx-auto">
         <div class="card card-body text-center">
           <p>No hay registros</p>
           <a href="/hardware/add">Crear Uno</a>
         </div>
       </div>
-    {{/each}}
+      {{/each}}
 
+    </div>
   </div>
-</div>
 
-<style>
-  .form-group-newreg { margin-bottom: 15px; display: flex; justify-content:
-  center; align-items: center;}
-</style>
+  <style>
+    .form-group-newreg {
+      margin-bottom: 15px;
+      display: flex;
+      justify-content:
+        center;
+      align-items: center;
+    }
+  </style>
