limpieza de archivos e inicio de implementacion del modulo people

--- a/src/views/modules/list.hbs
+++ b/src/views/modules/list.hbs
@@ -50,7 +50,7 @@
               Aquí puedes gestionar el personal de la empresa que tiene equipos
               asignados.
             </p>
-            <a href="/usuarios" class="btn btn-primary">Ir a la gestión de
+            <a href="/people" class="btn btn-primary">Ir a la gestión de
               usuarios</a>
           </div>
         </div>
